public-infra/consul/public-infra-ds-consul-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    daemonset: consul-agent
  name: consul-agent
  namespace: consul
spec:
  selector:
    matchLabels:
      daemonset: consul-agent
  template:
    metadata:
      labels:
        daemonset: consul-agent
    spec:
      containers:
      - name: consul-agent
        image: registry.k8s.example.com:5000/docker.io/consul:1.7.2
        args:
          - "agent"
          - "-join=consul-server.$(NAMESPACE).svc.cluster.local"
          - "-data-dir=/consul/data"
          - "-config-dir=/consul/config"
          - "-log-level=info"
          - "-log-rotate-duration=86400s"
          - "-log-rotate-max-files=7"
          - "-bind=0.0.0.0"
          - "-client=0.0.0.0"
          - "-advertise=$(PODIP)"
          - "-domain=cluster.local"
          - "-disable-host-node-id"
        imagePullPolicy: Always
        # consul agent跑在容器中，可以不用以下配置声明，因为它会自动暴露出来。
#        ports:
#          - containerPort: 8301 #使用hostport方式暴露地址
#            hostPort: 8301
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
          - name: data
            mountPath: /consul/data
          - name: config
            mountPath: /consul/config
      volumes:
        - name: data
          hostPath:
            path: /etc/consul-agent/data
        - name: config
          hostPath:
            path: /etc/consul-agent/config
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
