public-infra/consul/public-infra-ingress-consul-server.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: consul
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul.k8s.freedom.org
      http:
        paths:
          - path: /
            backend:
              serviceName: consul-server
              servicePort: 8500
